# asciiVideoPlayer

./: .gitignore  CMakeLists.txt  Makefile  README.md  my_executable  scripts.sh  scripts.txt
src/: lib.c  lib.h  main.c
